# PyLab

./: .gitignore  README.md  TestDemo.xlsx  new.xlsx  output_commands.txt  pyproject.toml  scpi_commands.txt
demo/: BKLoad.py  automate_test_and_record.py  excel.py
demo/communication/: commandset_help.py
demo/devices/: bkprecision_bk8616_mock.py  keysight_n5770a_mock.py
demo/excel/: basics.py
pylab/: __init__.py  cli.py  utilities.py
pylab/cli/: inst.py  scpi.py  validate_scpi.py
pylab/communication/: Connection.py  SCPI.py  VISA.py  __init__.py  commandset.py  connection.py  connectionHandler.py  connection_handler.py  mock.py  scpi.py  visa.py
pylab/data/: SCPI_BK500B.json  SCPI_BK8616.json  SCPI_BK9129B.json  SCPI_N5770A.json  SCPI_Schema.json  SCPI_common.json  command_set_BK500B.json  command_set_example.json
pylab/data/schemas/: SCPI_Command.json  SCPI_command.json  TODO.txt
pylab/devices/: BKPrecision.py  __init__.py  abstracts.py  base.py  baseclasses.py  bkprecision.py  dcload.py  dcsource.py  exceptions.py  keysight.py  scpidevice.py
pylab/fileio/: __init__.py  json.py
pylab/fileio/excel/: __init__.py  application.py  cellmath.py  workbook.py
scripts/: scpi2json.py  scpi2json_test.sh  scpi_commands.txt
test/: test_cellmath.py  test_scpi_commandvalidator.py
