[build-system]
requires = [
    "setuptools >= 61.0",
    "pyvisa >= 1.15",
    "pyvisa_py >= 0.8.1",
    "psutil >= 7.1.3",
    "zeroconf >= 0.148.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pylab"
description = "Python library for electronics labs"
license-files = ["LICENSE"]
keywords = ["electrical", "EE", "math", "symbolic", "engineering", "power"]
dynamic = ["version", "readme"]
requires-python = ">= 3.13"
dependencies = []

[project.scripts]
pylab = "pylab.cli:main"

[tool.setuptools]
packages = ["pylab"]

[tool.setuptools.package-data]
pyee=["data/*"]

[tool.setuptools.dynamic]
version = {attr = "pylab.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}

[tool.pylance]
typeCheckingMode = "standard"
verboseOutput = "true"
extraPaths = [".", "./pylab", "./pylab", "./pylab/*"]
